<resources>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="onBoardingTitle">Welcome to the Visa Application</string>
    <string name="onBoarding1_SubTitle">
        With the Visa Application, obtaining your electronic visa has become incredibly easy, whether it\'s a tourist visa, employment visa, or company visa. Don\'t worry about the exhausting procedures; we have a complete team working for your convenience.</string>
    <string name="onBoarding2_subTitle">Whether you are looking for a job or you are one of the owners of companies looking for employment, a team of experts will be at your service at the highest level, just fill out your form with easy steps without complications</string>
    <string name="onBoarding3_subTitle">You can reach your favorite destination anywhere in the world just prepare for your trip and leave the rest to us and enjoy a smooth and safe experience of obtaining your tourist visa</string>
    <string name="next">Next</string>
    <string name="app_name" translatable="false">Al Tasherat</string>
    <string name="altasherat_platform">Altasherat Platform</string>
    <string name="error_no_internet">Couldn\'t connect to server, please check your internet connection.</string>
    <string name="error_unknown">Something went wrong. Please try again later.</string>
    <string name="error_serialization">Couldn\'t serialize or deserialize data.</string>
    <string name="error_internal_server">Internal server error with code:%d, and the failure reason: %s</string>
    <string name="error_bad_request">The request was malformed or invalid. Please check your input and try again.</string>
    <string name="error_unauthorized">You are not authorized to access this resource. Please log in and try again.</string>
    <string name="error_forbidden">Access to this resource is forbidden. You do not have the required permissions.</string>
    <string name="error_not_found">The requested resource could not be found. Please check the URL or try again later.</string>
    <string name="error_unknown_http">An unexpected error occurred (HTTP %1$d). Please try again later or contact support.</string>
    <string name="error_io">An I/O error occurred while accessing local storage</string>
    <string name="error_data_corruption">Data corruption detected in local storage</string>
    <string name="error_type_mismatch">Unsupported data type for local storage</string>
    <string name="continue_txt">Continue</string>
    <string name="please_choose_language_txt">Please Choose Language</string>
    <string name="please_choose_country_txt">Please Choose Country</string>
    <string name="you_can_change_your_country_or_language_any_time_from_menu">You can change your country or language any time from menu</string>
    <string name="choose_country">Choose Country</string>
    <string name="selection_required">You need to make a selection.</string>
    <string name="arabic_language">Arabic</string>
    <string name="english_language">English</string>
    <string name="error_invalid_email">Invalid email address.</string>
    <string name="error_empty_email">Email cannot be empty.</string>
    <string name="error_invalid_password">Invalid password.</string>
    <string name="error_empty_password">Password cannot be empty.</string>
    <string name="error_empty_username">Username cannot be empty</string>
    <string name="error_invalid_username">Username must be 3–20 characters long and contain only letters, numbers, or underscores</string>
    <string name="error_empty_firstname">First name is required.</string>
    <string name="error_invalid_firstname">First name must be between 3 and 15 characters.</string>
    <string name="error_invalid_middlename">Middle name cannot exceed 15 characters.</string>
    <string name="error_empty_lastname">Last name is required.</string>
    <string name="error_invalid_lastname">Last name must be between 3 and 15 characters.</string>
    <string name="error_empty_password_confirmation">Password confirmation is required.</string>
    <string name="error_invalid_password_confirmation">Password confirmation must be between 8 and 50 characters.</string>
    <string name="error_password_mismatch">Passwords do not match.</string>
    <string name="error_empty_phone_number">Phone number is required.</string>
    <string name="error_invalid_phone_number">Phone number must be between 9 and 15 digits.</string>
    <string name="error_empty_country_code">Country code is required.</string>
    <string name="error_invalid_country_code">Country code must be between 3 and 5 characters.</string>
    <string name="skip_txt">Skip</string>
    <string name="signup">Sign up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="not_have_account">Do not have account?</string>
    <string name="create_new_acc">Create new account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_first_name">Enter First name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="email">Email</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="invalid_password_length">Password length must be more than 8 and less than 50</string>
    <string name="invalid_phone_or_password">Invalid Phone Number or Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="language">Language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading…</string>
    <string name="profile">Profile</string>
    <string name="requests">Requests</string>
    <string name="altasherat">Altasherat</string>
    <string name="middle_name">Middle Name</string>
    <string name="enter_middle_name">Enter Middle Name</string>
    <string name="birthday">Birthday</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="country">Country</string>
    <string name="enter_birthday">Enter Birthday</string>
    <string name="more">More</string>
    <string name="invalid_image_extension">Invalid Image Extension</string>
    <string name="invalid_image_size">Invalid Image Size</string>
    <string name="about_visa_platform">About Altasherat Platform</string>
    <string name="visa_platform_description">With the Visa Platform, you are always at the heart of our interests and the most important guest. Our goal is to make the travel experience easy and more enjoyable, which is why we gather all available travel options for travelers to Egypt in one place, so that Egypt is on your mobile.</string>
    <string name="consular_services">Consular Services</string>
    <string name="embassy_services">Embassy Services</string>
    <string name="application_for_work_visa">Application for Work Visa</string>
    <string name="application_for_tourist_visa">Application for Tourist Visa</string>
    <string name="what_do_you_offer">What do you offer?</string>
    <string name="save">Save</string>
    <string name="manage_account">Manage Account</string>
    <string name="permanently_deactivate_the_account">Permanently deactivate the account</string>
    <string name="all_information_transactions_and_reservations_will_be_lost">All information, transactions and reservations will be lost.</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password_to_confirm">Enter password to confirm</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password_title">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="new_password">New password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_new_password_again">Enter new password again</string>
    <string name="version_text">Current Version: V1.0</string>
</resources>