<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".features.menu_options.change_password.presentation.ChangePasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/change_pass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/change_password_title"
        app:titleTextAppearance="?textAppearanceTitleMedium" />

    <TextView
        android:id="@+id/old_password_txt"
        style="?textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/old_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_pass_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:boxBackgroundColor="?colorSurfaceInverse"
        app:boxCornerRadiusBottomEnd="26dp"
        app:boxCornerRadiusBottomStart="26dp"
        app:boxCornerRadiusTopEnd="26dp"
        app:boxCornerRadiusTopStart="26dp"
        app:boxStrokeColor="?colorPrimary"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password_txt"
        app:placeholderText="@string/enter_old_password"
        app:placeholderTextAppearance="?textAppearanceBodySmall"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/new_password_txt"
        style="?textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:boxBackgroundColor="?colorSurfaceInverse"
        app:boxCornerRadiusBottomEnd="26dp"
        app:boxCornerRadiusBottomStart="26dp"
        app:boxCornerRadiusTopEnd="26dp"
        app:boxCornerRadiusTopStart="26dp"
        app:boxStrokeColor="?colorPrimary"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_txt"
        app:placeholderText="@string/enter_new_password"
        app:placeholderTextAppearance="?textAppearanceBodySmall"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/confirm_password_txt"
        style="?textAppearanceTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:boxBackgroundColor="?colorSurfaceInverse"
        app:boxCornerRadiusBottomEnd="26dp"
        app:boxCornerRadiusBottomStart="26dp"
        app:boxCornerRadiusTopEnd="26dp"
        app:boxCornerRadiusTopStart="26dp"
        app:boxStrokeColor="?colorPrimary"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_txt"
        app:placeholderText="@string/enter_new_password_again"
        app:placeholderTextAppearance="?textAppearanceBodySmall"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_btn"
        style="@style/CustomButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/save"
        app:icon="@drawable/ic_save"
        app:iconGravity="textEnd"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_layout"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>