<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.authentecation.presentation.SignupFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_background"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signup_btn"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_signup"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="@id/card_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_background" />

    <TextView
        android:id="@+id/have_account_txt"
        style="@style/TextAppearance.AlTasherat.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@id/sign_in_txt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_btn" />

    <TextView
        android:id="@+id/sign_in_txt"
        style="@style/TextAppearance.AlTasherat.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/sign_in"
        android:textAlignment="textStart"
        android:textColor="@color/md_theme_secondary"
        app:layout_constraintBottom_toBottomOf="@id/have_account_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/have_account_txt"
        app:layout_constraintTop_toTopOf="@id/have_account_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>